Changed from online referencing to local referencing of jquery and css files

--- a/src/apps/copo_core/templates/copo/test.html
+++ b/src/apps/copo_core/templates/copo/test.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" href="{% static 'copo/css/copo/browse_style.css' %}" xmlns="http://www.w3.org/1999/html">
     <link rel="stylesheet" href="{% static 'copo/css/copo/orcid_profile.css' %}"
           xmlns="http://www.w3.org/1999/html">
-    {#    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">#}
+    {#    <link rel="stylesheet" href="{% static 'copo/jquery/css/jquery-ui-1.13.2.min.css' %}">#}
     {#    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>#}
     {#    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.js"></script>#}
     {##}
     {##}
     {##}
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="{% static 'copo/jquery/css/jquery-ui-1.13.2.min.css' %}">
     <script src="/static/copo/jquery/js/jquery-3.7.1.min.js"></script>
     {# <script src="/static/copo/jquery/js/jquery-3.7.1.js"></script>#}
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="{% static 'copo/jquery/js/jquery-ui-1.13.2.min.js' %}"></script>
     {##}
     {##}
     {##}
     {##}
     {#  <link rel="stylesheet" href="/resources/demos/style.css">#}
     {#  <script src="/static/copo/jquery/js/jquery-3.7.1.js"></script>#}
-    {#  <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>#}
+    {#  <script src="{% static 'copo/jquery/js/jquery-ui-1.13.2.min.js' %}"></script>#}
     <script>
         $(function () {
             $("#commonvalueID").datepicker({dateFormat: "yy-mm-dd", maxDate: 0});
