--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect.html
@@ -130,7 +130,7 @@
     <script src="{% static 'copo/js/fastdom.js' %}"></script>
     <script src="{% static 'copo/datatables/js/moment-2.30.1.js' %}"></script>
     <script src="{% static 'copo/datatables/js/datetime.moment-1.13.7.js' %}"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootbox.js/5.5.3/bootbox.min.js"></script>
+    <script src="{% static 'copo/js/bootbox-6.0.0.min.js' %}"></script>
     <script>socket = undefined</script>
 
 {% endblock %}
