1st ATPt at revising About web page according to latest Bootstrap version

--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -102,9 +102,9 @@
     </div>
 
     <div class="row">
-        <div class="col-md-10 col-md-offset-1">
+        <div class="col-md-10 col-md-offset-1 row">
             <div class="col-lg-3 col-md-3 col-sm-3 person">
-                <img class="img-circle" src="/static/assets/img/felix.jpg" alt="Felix Sahw's portrait picture">
+                <img class="img-circle" src="/static/assets/img/felix.jpg" alt="Felix Shaw's portrait picture">
             </div>
             <div class="p_bio col-md-9 col-sm-9 col-lg-9">
                 <h3 class="header_font_weight">Felix Shaw</h3>
@@ -125,10 +125,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-offset-1 col-md-10">
-            <div class="col-md-9 col-sm-9 col-lg-9 text-right">
-                <h3 class="header_font_weight text-right">Debby Ku</h3>
-                <p class="p_position text-right">Earlham Institute</p>
+        <div class="col-md-offset-1 col-md-10 row">
+            <div class="col-md-9 col-sm-9 col-lg-9 text-end">
+                <h3 class="header_font_weight text-end">Debby Ku</h3>
+                <p class="p_position text-end">Earlham Institute</p>
                 <p> 
                     Debby is a Research Software Engineer working on COPO.<br><br>
 
@@ -138,7 +138,7 @@
                     from the University of Hong Kong.
                 </p>
 
-                <p class="p_orcid text-right"><img src="/static/assets/img/orcid.png" alt="ORCID logo"><a
+                <p class="p_orcid text-end"><img src="/static/assets/img/orcid.png" alt="ORCID logo"><a
                     href="http://orcid.org/0000-0001-9174-3296"> orcid.org/0000-0001-9174-3296</a>
                 </p>
             </div>
@@ -149,7 +149,7 @@
 
         </div>
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-1 row">
                 <div class="col-lg-3 col-md-3 col-sm-3 person">
                     <img class="img-circle" src="/static/assets/img/aaliyah.jpg"
                         alt="Aaliyah Providence's portrait picture">
