Made top navbar fixed; added padding on About web page;

--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -251,7 +251,7 @@
     <b>{{ latest_message }}</b>
 </div>
 
-<nav id="copo-global-nav" class="navbar navbar-expand-lg bg-light navbar-light border-bottom border-black" role="navigation">
+<nav id="copo-global-nav" class="navbar navbar-expand-lg bg-light navbar-light border-bottom border-black fixed-top" role="navigation">
     <div class="container-fluid">
         <a class="navbar-brand" href="{% url 'copo_profile_index:index' %}">
             <img class="icon-margin-top" style="height: 45px; margin-left: 0; margin-top: -8px;"
