--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -124,7 +124,8 @@
             </div>
         </div>
     </div>
-    <div class="row">
+
+    <div class="row pt-4">
         <div class="col-md-offset-1 col-md-10 row">
             <div class="col-md-9 col-sm-9 col-lg-9 text-end">
                 <h3 class="header_font_weight text-end">Debby Ku</h3>
@@ -148,7 +149,8 @@
             </div>
 
         </div>
-        <div class="row">
+
+        <div class="row pt-4">
             <div class="col-md-10 col-md-offset-1 row">
                 <div class="col-lg-3 col-md-3 col-sm-3 person">
                     <img class="img-circle" src="/static/assets/img/aaliyah.jpg"
@@ -182,8 +184,7 @@
     </div>
 </div>
 
-<div class="row">
-    <br>
+<div class="row pt-5">
     <div class="col-md-10 col-md-offset-1">
         <h3 class="header_font_weight"> Former Team Members and Contributors</h3>
         <ul id="former_members_contributors_ul" class="margin-left: 10px">
