--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -1,6 +1,6 @@
 {% load web_tags %}
 {% load static %}
-<nav id="frontpage-navbar" class="navbar navbar-expand-lg bg-light navbar-light border-bottom border-black"
+<nav id="frontpage-navbar" class="navbar navbar-expand-lg bg-light navbar-light border-bottom border-black fixed-top"
      role="navigation">
     <div class="container-fluid">
         <a class="navbar-brand"
