allow user to download the command for uploading files in a terminal

--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -88,7 +88,7 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                    <button type="button" id="copy_urls_button" class="btn btn-primary">Copy</button>
+                    <button type="button" id="copy_urls_button" class="btn btn-primary">Download</button>
                     <button type="button" id="process_urls_button" class="btn btn-primary">Process</button>
                 </div>
             </div><!-- /.modal-content -->
