Made grammatical corrections

--- a/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
+++ b/src/apps/copo_tol_dashboard/templates/tol_dashboard/copo_tol_inspect_gal.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="col-lg-4 col-md-4 col-sm-4 display: inline;">
             <h3 class="h3 page-header-width">
-                <div class="word-break">Tree of Life (ToL) Inspection by Genome Acquisition Labs (GAL)</div>
+                <div class="word-break">Tree of Life (ToL) Inspection by Genome Acquisition Labs (GALs)</div>
                 <button class="big circular ui icon green button tol_inspect copo-tooltip"
                         title="View TOL Inspection">
                     <i class="icon clipboard list"></i>
