--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -5,6 +5,11 @@
 {% load html_tags %}
 
 {% block title %}Files{% endblock %}
+
+{% block stylesheet_block %}
+    <link rel="stylesheet" href="{% static 'copo/css/copo_files.css' %}">
+{% endblock %}
+
 {% block title_block %}Files{% endblock %}
 
 {% block tagline_block %}
@@ -105,6 +110,9 @@
                     <h4 class="modal-title">Upload File</h4>
                 </div>
                 <div class="modal-body">
+                    <div class="alert file-size-alert-warning" role="alert">
+                        <p class="warning-content">The total <b>maximum</b> file size that can be uploaded from your local (computer) system is around <b>700 MB</b>. </p>
+                    </div>
                     <p>Upload files by browsing your local system</p>
                     <input id="file" type="file" style="display:none" multiple="multiple"
                            onchange="upload_files(this.files)">
