Add ENA file processing status to READ/Assembly/Annotation View

--- a/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
+++ b/src/apps/copo_assembly_submission/templates/copo/copo_assembly.html
@@ -13,6 +13,9 @@
         .highlight_no_accession {
             background-color: #FFD700 !important;
         }
+        .highlight_error_file_processing_status {
+            background-color: #f88080!important;
+        }              
     </style>
 
 {% endblock %}
