Corrected spelling errors

--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -605,7 +605,7 @@
     </button>
 
     <!-- button to download blank spreadsheet -->
-    <a  title="Download Blank Manfiest Template"
+    <a  title="Download Blank Manifest Template"
             class="big circular ui icon brown button download-blank-manifest-template copo-tooltip" target="_blank">
         <i class="icon download sign"></i>
     </a>
