Reformated 'copo_reads' web page

--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -1,6 +1,10 @@
-{% extends 'copo/base_2col.html' %} {% load static %} {% load web_tags %} {%
-load html_tags %} {% block title %}Reads{% endblock %} {% block stylesheet_block
-%}
+{% extends 'copo/base_2col.html' %}
+{% load static %} {% load web_tags %} 
+{%load html_tags %}
+
+{% block title %}Reads{% endblock %}
+
+{% block stylesheet_block%}
 <style>
   .highlight_accession {
     background-color: #d9e8d9 !important;
@@ -14,8 +18,10 @@ load html_tags %} {% block title %}Reads{% endblock %} {% block stylesheet_block
   }
 </style>
 
-{% endblock %} {% block title_block %}Reads{% endblock %} {% block tagline_block
-%} {% endblock %} {% block browse_header_block %} {% csrf_token %}
+{% endblock %} 
+{% block title_block %}Reads{% endblock %}
+{% block tagline_block%} {% endblock %}
+{% block browse_header_block %} {% csrf_token %}
 <div hidden id="hidden_attrs">
   <!-- hidden attributes  -->
   <input type="hidden" id="profile_title" value="{{ profile.title }}" />
@@ -30,29 +36,31 @@ load html_tags %} {% block title %}Reads{% endblock %} {% block stylesheet_block
     id="blank_manifest_url"
     value="{{  'read'|get_blank_manifest_url  }}"
   />
-  }}"
-
+  
   <input
     type="hidden"
     id="blank_manifest_url_read"
     value="{% url 'copo_read_submission:download_initial_manifest' profile_id=profile_id %}"
   />
-  }}" {% for checklist in checklists %}
-  <input
-    type="hidden"
-    id="blank_manifest_url_{{checklist.primary_id}}"
-    value="{{ checklist.primary_id  | get_blank_manifest_url  }}"
-  />
-  }}" {% endfor %}
+  {% for checklist in checklists %}
+    <input
+      type="hidden"
+      id="blank_manifest_url_{{checklist.primary_id}}"
+      value="{{ checklist.primary_id  | get_blank_manifest_url  }}"
+    />
+  {% endfor %}
   <input
     type="hidden"
     id="component_subtitle"
     value="<select id='checklist_id' name='checklists'>{% for checklist in checklists %}<option value='{{ checklist.primary_id }}' title='{{checklist.description}}' >{{ checklist.primary_id }} : {{ checklist.name }}</option>{% endfor %}</select> "
   />
 </div>
-{% endblock %} {% block page_tile %} {% include "component_navbar.html" %} {%
-endblock page_tile %} {% block content %}
+{% endblock %}
+{% block page_tile %}
+{% include "component_navbar.html" %}
+{% endblock page_tile %}
 
+{% block content %}
 <!-- getting started section -->
 <div class="row">
   <div
@@ -144,15 +152,20 @@ endblock page_tile %} {% block content %}
 
 <div id="data" style="display: none"></div>
 
-{% endblock %} {% block help_section %} {% endblock %} {% block component_info
-%}
+{% endblock %}
+
+{% block help_section %} {% endblock %}
+
+{% block component_info%}
 <div
   style="display: none; margin-top: 30px"
   id="sample_info"
   class="alert alert-info"
   role="alert"
 ></div>
-{% endblock %} {% block js_block %}
+{% endblock %}
+
+{% block js_block %}
 <script src="{% static 'copo/js/generic_handlers.js' %}"></script>
 <script src="{% static 'copo/js/generic_handlers_ext2.js' %}"></script>
 <script src="{% static 'copo/js/copo_form_handlers.js' %}"></script>
