Performance fix: Improved table data load time on Accessions (profile-level) web page and Accessions dashboard

--- a/src/apps/copo_accession/static/copo_accessions/css/copo_accessions.css
+++ b/src/apps/copo_accession/static/copo_accessions/css/copo_accessions.css
@@ -23,6 +23,15 @@ th {
     z-index: 2;
 }
 
+.cell-no-content,
+.empty_color {
+    background-color: #fff3f3 !important;
+}
+
+.na_color {
+    background-color: #eee;
+}
+
 /*Filter projecttypes usign checkboxes*/
 .alert {
     --bs-alert-bg: transparent;
