--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -445,8 +445,8 @@
         </div>
 
         <div class="btn-group btn-toggle toggle-view">
-            <button class="btn btn-xs btn-success active">Tree of Life Projects</button>
-            <button class="btn btn-xs btn-default">Stand-alone Projects</button>
+            <button class="btn btn-xs btn-success active">Sample Accessions</button>
+            <button class="btn btn-xs btn-default">Other Accessions</button>
        </div>
     </div>
 
