Bug fix: Fixed UI display and table data record retrieval on 'Accessions dashboard' web page and Accession web page for a given profile

--- a/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
+++ b/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
@@ -11,7 +11,13 @@
     <style></style>
 {% endblock %}
 
-{% block title_block %} {% if showAllCOPOAccessions is True %} Accessions {% else %} Accessions Dashboard {% endif %} {% endblock %}
+{% block title_block %}
+    {% if showAllCOPOAccessions is True %}
+        Accessions 
+    {% else %}
+        Accessions Dashboard
+    {% endif %}
+{% endblock %}
 
 {% block tagline_block %}
 
@@ -21,18 +27,18 @@
     {% csrf_token %}
     <div hidden id="hidden_attrs">
         <!-- hidden attributes  -->
-        <input type="hidden" id="showAllCOPOAccessions" value="{{ showAllCOPOAccessions }}"/>
+        <input type="hidden" id="showAllCOPOAccessions" value="{{ showAllCOPOAccessions }}" />
 
         {% if showAllCOPOAccessions is True %}
-            <input type="hidden" id="nav_component_name" value="accessions_dashboard"/>
-        {% else %} 
-            <input type="hidden" id="nav_component_name" value="accessions"/>
-            <input type="hidden" id="profile_id" value="{{ profile_id }}"/>
-            <input type="hidden" id="profile_type" value="{{ profile.type | get_short_profile_type }}"/>
-            <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
-            <input type="hidden" value="{# url 'copo:copo_submissions' profile_id=profile_id #}" name="submission_url"
-                id="submission_url"/>
-        {% endif %} 
+        <input type="hidden" id="nav_component_name" value="accessions_dashboard" />
+        {% else %}
+        <input type="hidden" id="nav_component_name" value="accessions" />
+        <input type="hidden" id="profile_id" value="{{ profile_id }}" />
+        <input type="hidden" id="profile_type" value="{{ profile.type | get_short_profile_type }}" />
+        <input type="hidden" id="profile_title" value="{{ profile.title }}" />
+        <input type="hidden" value="{# url 'copo:copo_submissions' profile_id=profile_id #}" name="submission_url"
+            id="submission_url" />
+        {% endif %}
     </div>
 {% endblock browse_header_block %}
 
@@ -41,15 +47,14 @@
 {% endblock page_tile %}
 
 {% block content %}
-    <script> let groups = {{ groups|safe }}</script>
-    <input type="hidden" id="groups" value="{{ groups|safe }}"/>
+    <script> let groups = {{ groups| safe }}</script>
+    <input type="hidden" id="groups" value="{{ groups|safe }}" />
 
     <!-- accessions table section -->
     <div style="margin-top: 15px;">
         <!-- getting started section -->
         <div class="row">
-            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message"
-                 style="display: none;">
+            <div class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-0 page-welcome-message" style="display: none;">
                 <div class="copo-webui-popover">
                     <div class="webui-popover-inner">
                         <h3 class="copo-webui-popover-title">Accessions - Getting started</h3>
@@ -59,17 +64,17 @@
                                 biological samples that have biosample accession, SRA accession
                                 and submission accession associated with them as part of a project
                                 after the samples have been accepted.
-                                
+
                                 {% if showAllCOPOAccessions is False %}
-                                    <br/><br/>
-                                    <div><strong>All COPO accessions: </strong>To explore all accessions on COPO,
-                                        click the
-                                        <button class="circular tiny ui icon pink button">
-                                            <i class="icon sitemap"></i>
-                                        </button>
-                                        icon.
-                                    </div>
-                                {% endif %} 
+                                <br /><br />
+                                <div><strong>All COPO accessions: </strong>To explore all accessions on COPO,
+                                    click the
+                                    <button class="circular tiny ui icon pink button">
+                                        <i class="icon sitemap"></i>
+                                    </button>
+                                    icon.
+                                </div>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
@@ -79,14 +84,13 @@
 
         <!-- accessions table  -->
         <div id="component_table_loader" class="col-sm-5 col-md-5 col-lg-5 col-xs-offset-5"
-             data-copo-tour-id="accessions_table"></div>
+            data-copo-tour-id="accessions_table"></div>
         <table id="accessions_table" class="ui celled table hover copo-noborders-table" style="width:100%">
         </table>
     </div>
 {% endblock %}
 
 {% block help_section %}
-
 {% endblock %}
 
 {% block js_block %}
