--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -28,7 +28,7 @@
   <input
     type="hidden"
     id="profile_type"
-    value="{{ profile.type | get_short_profile_type }}"
+    value="{{ profile.type }}"
   />
   <input type="hidden" id="nav_component_name" value="read" />
   <input
