--- a/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
+++ b/src/apps/copo_accession/templates/copo/accessions/copo_accessions.html
@@ -28,7 +28,7 @@
         {% else %} 
             <input type="hidden" id="nav_component_name" value="accessions"/>
             <input type="hidden" id="profile_id" value="{{ profile_id }}"/>
-            <input type="hidden" id="profile_type" value="{{ profile.type | get_short_profile_type }}"/>
+            <input type="hidden" id="profile_type" value="{{ profile.type  }}"/>
             <input type="hidden" id="profile_title" value="{{ profile.title }}"/>
             <input type="hidden" value="{# url 'copo:copo_submissions' profile_id=profile_id #}" name="submission_url"
                 id="submission_url"/>
