--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -679,7 +679,7 @@ blockquote {
     min-height: 300px;
 }
 
-.news-item {
+/* .news-item {
     color: black;
     min-height: 200px;
     background-color: white;
@@ -696,7 +696,7 @@ blockquote {
 
 .news-item-text {
     padding-left: 30px
-}
+} */
 
  /*.news-item-text a {
        color: indianred;
