--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -3,10 +3,10 @@
 {% load static %}
 {% block title %}About{% endblock %}
 
-{% block stylesheet_block %}
+{% block stylesheet_block %}F
 <style>
     body {
-        background-color: rgba(179, 151, 89, 0.7);
+        background-color: rgba(49, 48, 44, 0.7);
     }
     
     a {
