--- a/src/apps/copo_landing_page/templates/nav_dropdown.html
+++ b/src/apps/copo_landing_page/templates/nav_dropdown.html
@@ -23,6 +23,7 @@
                         <li role="presentation"><a href="/copo/copo_accessions/dashboard">Accessions Dashboard</a></li>
                     </ul>
                 </li>
+                <li role="presentation"><a href="/news">News</a></li>
                 <li role="presentation"><a href="/about">About</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
