--- a/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
+++ b/src/apps/copo_dtol_submission/templates/copo/copo_sample_accept_reject.html
@@ -51,11 +51,16 @@
 {% endblock page_tile %}
 
 {% block content %}
-    <div class="row">
+    <div class="row padding-top-20">
         <div class="col-lg-9 col-sm-9 col-md-9">
-            <h3 class="h3">Choose to Accept or Reject  &nbsp; &nbsp; <select id='group_id' class="form-control" style="display: inline-block; width: fit-content;" name='group' title="Type of manifest to accept/reject samples for">{% for group in sample_manager_groups %}<option value='{{ group }}' title='{{group}}' >{{ group }}</option>{% endfor %}</select>  </h3>
-            <h3 class="h3"><small>Note clicking accept will immediately send sample info to ENA/Biosamples</small></h3>
-
+            <h3 class="h3">Choose to Accept or Reject&emsp;&nbsp;<select id='group_id' class="form-control" style="display: inline-block; width: fit-content;" name='group' title="Type of manifest to accept/reject samples for">{% for group in sample_manager_groups %}<option value='{{ group }}' title='{{group}}' >{{ group }}</option>{% endfor %}</select>  </h3>
+            <h3 class="h3"><small>Note: Clicking the 'Accept' button will immediately send sample information to European Nucleotide Archive (ENA) or BioSample</small></h3>
+            <h3 class="h3">
+                <small> Toggle profile panel visibility:&emsp;
+                    <button id="toggleProfilePanelBtn" class="btn btn-primary btn-sm" type="button">Hide profile panel
+                    </button>
+                </small>
+            </h3>
         </div>
         <div class="col-lg-3 col-sm-3 col-md-3">
             <h4 class="h4">Status</h4>
@@ -72,7 +77,7 @@
     <hr class="hr_margin_top"/>
 
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4">
+        <div class="panel-col-4" id="profile_panel">
             <ul hidden class="nav nav-tabs profile-filter" id="erga">
                 <li class="hot_tab_profile in active">
                     <a data-toggle="tab" href="my_profiles">Profiles for My Sequencing Centre</a>
@@ -100,7 +105,7 @@
             </table>
 
         </div>
-        <div class="col-lg-8 col-md-8 col-sm-8" id="sample_panel">
+        <div class="panel-col-8" id="sample_panel">
 
             <div class="ui buttons" id="accept_reject_button" style="margin-bottom: 10px">
                 <button type="button" disabled="true" class="ui negative button">
