Updated GitHub account name to TGAC i.e. Earlham Institute's GitHub account

--- a/src/apps/copo_landing_page/templates/dtol.html
+++ b/src/apps/copo_landing_page/templates/dtol.html
@@ -189,7 +189,7 @@
     <div>
     <span style="float: left"><a href="https://www.jetbrains.com/pycharm/"><img style="margin-left:20px" height="40px"
                                                                                 src="/static/assets/img/icon_PyCharm.png"></a></span>
-        <span style="float: left"><a href="https://github.com/collaborative-open-plant-omics"><img
+        <span style="float: left"><a href="https://github.com/orgs/TGAC/repositories?q=COPO"><img
                 style="margin-left:20px" height="40px" src="/static/copo/img/Octocat.png"/></a></span>
 
 
