--- a/src/apps/copo_landing_page/templates/news.html
+++ b/src/apps/copo_landing_page/templates/news.html
@@ -151,7 +151,7 @@
             <div class="col-md-5" style="margin-left: 10px;">
                 <h2>Releases and new features</h2>
                 <p>You can find a full list of releases and features in <a
-                        href="https://github.com/collaborative-open-plant-omics/COPO">
+                        href="https://github.com/TGAC/COPO-production">
                     our GitHub repository</a></p>
                 <br/>
                 <li><strong> Version 1.2 <span class="label label-success">NEW</span> : </strong> released DToL
@@ -187,7 +187,7 @@
     <div>
     <span style="float: left"><a href="https://www.jetbrains.com/pycharm/"><img style="margin-left:20px" height="40px"
                                                                                 src="/static/assets/img/icon_PyCharm.png"></a></span>
-        <span style="float: left"><a href="https://github.com/collaborative-open-plant-omics"><img
+        <span style="float: left"><a href="https://github.com/orgs/TGAC/repositories?q=COPO"><img
                 style="margin-left:20px" height="40px" src="/static/copo/img/Octocat.png"/></a></span>
 
 
