--- a/src/apps/copo_landing_page/templates/people.html
+++ b/src/apps/copo_landing_page/templates/people.html
@@ -257,7 +257,7 @@
     <div>
     <span style="float: left"><a href="https://www.jetbrains.com/pycharm/"><img style="margin-left:20px" height="40px"
                                                                               src="/static/assets/img/icon_PyCharm.png"></a></span>
-    <span style="float: left"><a href="https://github.com/collaborative-open-plant-omics"><img style="margin-left:20px" height="40px" src="/static/copo/img/Octocat.png" /></a></span>
+    <span style="float: left"><a href="https://github.com/orgs/TGAC/repositories?q=COPO"><img style="margin-left:20px" height="40px" src="/static/copo/img/Octocat.png" /></a></span>
 
 
 <span style="float: right; text-align: center"><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br /><a rel="license" href="http://creativecommons.org/licenses/by/4.0/">CC 4.0</a></span>
