Include 'id' attribute so that a hyperlink can be made to sections on the 'About' web page (and used in COPO's documentation)

--- a/src/apps/copo_landing_page/templates/about.html
+++ b/src/apps/copo_landing_page/templates/about.html
@@ -83,7 +83,7 @@
     </div>
 
     <br><br>
-    <div class="col-md-10 col-md-offset-1">
+    <div id="project-team-section-current" class="col-md-10 col-md-offset-1">
         <h2>COPO Team</h2>
         <p>
             The Collaborative OPen Omics (COPO) team is part of the Data Infrastructure and Algorithms group
@@ -184,7 +184,7 @@
 
 <div class="row">
     <br>
-    <div class="col-md-10 col-md-offset-1">
+    <div id="project-team-section-former" class="col-md-10 col-md-offset-1">
         <h3 class="header_font_weight"> Former Team Members and Contributors</h3>
         <ul id="former_members_contributors_ul" class="margin-left: 10px">
             <li><a href="http://orcid.org/0000-0002-5589-7754">Dr. Robert Davey</a>, Earlham Institute</li>
