--- a/src/apps/copo_core/templates/copo/base.html
+++ b/src/apps/copo_core/templates/copo/base.html
@@ -95,6 +95,10 @@
     <link rel="stylesheet" media="print" onload="this.media='all'"
           href="{% static 'copo/semantic_ui/components/popup.min.css' %}">
 
+    <script>
+    {% include 'copo/copo_profile_types.html' %}
+    </script>
+
     <!-- Additional javascripts -->
     {% block js_block %}{% endblock %}
 
