--- a/src/apps/copo_file/templates/copo/copo_files.html
+++ b/src/apps/copo_file/templates/copo/copo_files.html
@@ -24,6 +24,7 @@
         <input type="hidden" id="nav_component_name" value="files"/>
         <input type="hidden" id="profile_type" value="{{ profile_type }}"/>
         <input type="hidden" id="profile_title" value="{{ profile_title }}"/>
+        <input type="hidden" id="profile_id" value="{{ profile_id }}" />
     </div>
 {% endblock browse_header_block %}
 
