--- a/src/apps/copo_landing_page/templates/ebp_resources.html
+++ b/src/apps/copo_landing_page/templates/ebp_resources.html
@@ -30,7 +30,7 @@
             </li>
 
             <li style="list-style: none; padding-top: 20px">
-                Email us at <a style="text-decoration: underline;" href="mailto:ei.copo@earlham.ac.uk">ei.copo@earlham.ac.uk</a>
+                Email us at <a style="text-decoration: underline;" href="mailto:{{copo_email}}">{{copo_email}}</a>
                 if you need to be added to the user group of the subproject you are part of.
             </li>
         </ul>
