--- a/src/apps/copo_read_submission/templates/copo/copo_read.html
+++ b/src/apps/copo_read_submission/templates/copo/copo_read.html
@@ -25,6 +25,7 @@
 <div hidden id="hidden_attrs">
   <!-- hidden attributes  -->
   <input type="hidden" id="profile_title" value="{{ profile.title }}" />
+  <input type="hidden" id="profile_id" value="{{ profile_id }}" />
   <input
     type="hidden"
     id="profile_type"
