--- a/src/apps/copo_sample/templates/copo/copo_sample.html
+++ b/src/apps/copo_sample/templates/copo/copo_sample.html
@@ -279,7 +279,7 @@
     <script src="{% static 'copo/js/generic_handlers_ext2.js' %}"></script>
     <script src="{% static 'copo/js/copo_form_handlers.js' %}"></script>
     <script src="{% static 'copo/js/copo_sample.js' %}"></script>
-    <script src="{% static 'copo/js/dtol_functions.js' %}"></script>
+    <!--script src="{% static 'copo/js/dtol_functions.js' %}"></script-->
     <script src="{% static 'copo/js/animated_ellipsis.js' %}"></script>
     <script src="{% static 'copo/js/copo_parse_spreadsheet.js' %}"></script>
     <!-- <script src="{% static 'copo/js/csv_column_updates.js' %}"></script> -->
