--- a/src/apps/copo_core/templates/copo/components_template.html
+++ b/src/apps/copo_core/templates/copo/components_template.html
@@ -215,7 +215,7 @@
                    "(2) 'multi' - if the buttons's action is intended to impact one or more records,"
                    "(3) 'all' - always true, and none dependent of row selections e.g., add button",
     -->
-    <div class="record-action-templates">
+    <!--div class="record-action-templates">
 
         <div class="add_record_all tiny ui basic dtables-dbuttons  blue button copo-dt copo-tooltip"
              data-container="body"
@@ -341,6 +341,8 @@
             <span class="action-label" style="padding-left: 3px;">Summarise</span>
         </div>
 
+
+
         <div class="submit_assembly_multi tiny ui basic dtables-dbuttons  teal button copo-dt copo-tooltip"
              data-container="body"
              data-action="submit_assembly"
@@ -444,14 +446,11 @@
             <span class="action-label" style="padding-left: 3px;">Download permits</span>
         </div>
 
-        <div class="btn-group btn-toggle toggle-view">
-            <button class="btn btn-xs btn-success active">Sample Accessions</button>
-            <button class="btn btn-xs btn-default">Other Accessions</button>
-       </div>
-    </div>
+
+    </div-->
 
 
-    <div id="dataverse-table-template">
+    <!--div id="dataverse-table-template">
         <table class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
@@ -466,10 +465,10 @@
             <tbody>
             </tbody>
         </table>
-    </div>
+    </div-->
 
 
-    <div id="ckan-table-template">
+    <!--div id="ckan-table-template">
         <table class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
@@ -481,9 +480,9 @@
             <tbody>
             </tbody>
         </table>
-    </div>
+    </div-->
 
-    <div id="dspace-table-template">
+    <!--div id="dspace-table-template">
         <table class="table table-striped table-bordered" style="width:100%">
             <thead>
             <tr>
@@ -497,10 +496,10 @@
             <tbody>
             </tbody>
         </table>
-    </div>
+    </div-->
 
     <!-- Datatables row Panel template -->
-    <div class="datatables-panel-template">
+    <!--div class="datatables-panel-template">
         <div class="panel panel-dtables2">
             <div class="panel-heading" style="background-image: none; border: none;">
                 <div class="row">
@@ -517,9 +516,9 @@
             </div>
             <div class="panel-body">Panel Content</div>
         </div>
-    </div>
+    </div-->
 
-    <div class="datatables3-panel-template">
+    <!--div class="datatables3-panel-template">
         <div class="panel panel-dtables3">
             <div class="panel-heading" style="background-image: none; border: none;">
                 <div class="row">
@@ -536,116 +535,116 @@
             </div>
             <div class="panel-body">Panel Content</div>
         </div>
-    </div>
+    </div-->
 
     <!-- quick tour button template -->
-    <button title="Quick tour"
+    <!--button title="Quick tour"
             class="big circular ui icon orange button takeatour quick-tour-template copo-tooltip">
         <i class="icon lightbulb"></i>
-    </button>
+    </button-->
 
     <!-- new component button template -->
-    <button title="Add new profile record"
+    <!--button title="Add new profile record"
             class="big circular ui icon primary button new-component-template copo-tooltip">
         <i class="icon add sign"></i>
-    </button>
+    </button-->
 
     <!-- describe sample button template -->
-    <button title="Describe samples using COPO Wizard"
+    <!--button title="Describe samples using COPO Wizard"
             class="big circular ui icon primary button new-samples-template copo-tooltip">
         <i class="icon plus sign"></i>
-    </button>
+    </button-->
 
     <!-- button to upload spreadsheet for dtol/asg users -->
-    <button style="display: none" title="Add Sample(s) from DTOL/ASG Spreadsheet"
+    <!--button   title="Add Sample(s) from Spreadsheet"
             class="big circular ui icon button new-samples-spreadsheet-template copo-tooltip">
         <i class="icon table sign"></i>
-    </button>
+    </button-->
 
     <!-- button to view samples for dtol users-->
-    <button style="display: none" title="View DTOL/ASG Sample(s)"
+    <!--button style="display: none" title="View DTOL/ASG Sample(s)"
             class="big circular ui icon green button view-samples copo-tooltip">
         <i class="icon table sign"></i>
-    </button>
+    </button-->
 
     <!-- button to view samples for erga users -->
-    <button style="display: none" title="View ERGA Sample(s)"
+    <!--button style="display: none" title="View ERGA Sample(s)"
             class="big circular ui icon pink button view-samples-erga copo-tooltip">
         <i class="icon table sign"></i>
-    </button>
+    </button-->
 
     <!-- button to upload spreadsheet for dtol users -->
-    <button style="display: inline" title="Add Read(s) from Read Spreadsheet"
+    <!--button style="display: inline" title="Add Read(s) from Read Spreadsheet"
             class="big circular ui icon button new-reads-spreadsheet-template copo-tooltip">
         <i class="icon table sign"></i>
-    </button>
+    </button-->
 
     <!-- button to upload spreadsheet for erga users -->
-    <button style="display: none" title="Upload ERGA Manifest"
+    <!--button style="display: none" title="Upload ERGA Manifest"
             class="big circular ui icon pink button new-samples-spreadsheet-template-erga copo-tooltip">
         <i class="icon table sign"></i>
-    </button>
+    </button-->
 
     <!-- new component button template -->
-    <button title="Add new file by browsing local file system"
+    <!--button title="Add new file by browsing local file system"
             class="big circular ui icon primary button new-local-file copo-tooltip">
         <i class="icon desktop sign"></i>
-    </button>
+    </button-->
 
     <!-- new component button template -->
-    <button title="Add new file by terminal"
+    <!--button title="Add new file by terminal"
             class="big circular ui icon primary button new-terminal-file copo-tooltip">
         <i class="icon terminal sign"></i>
-    </button>
+    </button-->
 
     <!-- button to upload spreadsheet for barcoding -->
-    <button style="display: inline" title="Add Tagged Sequence (s) from Tagged Sequence Spreadsheet"
+    <!--button style="display: inline" title="Add Tagged Sequence (s) from Tagged Sequence Spreadsheet"
             class="big circular ui icon button new-taggedseq-spreadsheet-template copo-tooltip">
         <i class="icon table sign"></i>
-    </button>
+    </button-->
 
     <!-- button to download blank spreadsheet -->
-    <a  title="Download Blank Manifest Template"
+    <!--a  title="Download Blank Manifest Template"
             class="big circular ui icon brown button download-blank-manifest-template copo-tooltip" target="_blank">
         <i class="icon download sign"></i>
-    </a>
+    </a-->
 
     <!-- button to download SOP spreadsheet -->
-    <a title="Download Standard Operating Procedure (SOP)"
+    <!--a title="Download Standard Operating Procedure (SOP)"
         class="big circular ui icon yellow button download-sop copo-tooltip" target="_blank">
         <i class="icon download sign"></i>
-    </a>
+    </a-->
 
     <!-- button to for dtol_sample_managers to accept/reject submitted samples -->
-    <button style="display: none" title="Accept/Reject TOL Samples"
+    <!--button style="display: none" title="Accept/Reject TOL Samples"
             class="big circular ui icon teal button accept_reject_samples copo-tooltip">
         <i class="icon tasks sign"></i>
-    </button>
+    </button-->
 
     <!-- button for erga_users, erga_sample_managers, dtol_users or dtol_sample_managers to inspect
          TOL of samples within a profile -->
-    <button style="display: none" title="Inspect TOL"
+    <!--button style="display: none" title="Inspect TOL"
             class="big circular ui icon yellow button tol_inspect copo-tooltip">
         <i class="icon clipboard list"></i>
-    </button>
+    </button-->
 
     <!-- button for erga_users, erga_sample_managers, dtol_users or dtol_sample_managers to inspect
        TOL of samples by GAL within a profile -->
-    <button class="big circular ui icon green button tol_inspect_gal copo-tooltip" title="Inspect TOL by GAL">
+    <!--button class="big circular ui icon green button tol_inspect_gal copo-tooltip" title="Inspect TOL by GAL">
         <i class="icon building"></i>
-    </button>
+    </button-->
 
     <!-- button for erga_users, erga_sample_managers, dtol_users or dtol_sample_managers to view
          all sample accessions on COPO -->
-    <button style="display: none" title="View Accessions Dashboard"
+    <!--button style="display: none" title="View Accessions Dashboard"
             class="big circular ui icon pink button copo_accessions copo-tooltip">
         <i class="icon sitemap"></i>
-    </button>
+    </button-->
 
     <!-- record tasks button -->
-    <button title="Record tasks" class="big circular ui icon button record-tasks-template copo-tooltip">
+    <!--button title="Record tasks" class="big circular ui icon button record-tasks-template copo-tooltip">
         <i class="icon tasks"></i>
-    </button>
+    </button-->
 
 
     <!-- profile components button template -->
@@ -761,7 +760,7 @@
             </div>
         </div>
         <!-- profiles legend -->
-        <div id="copo-sidebar-accessions" >
+        <!--div id="copo-sidebar-accessions" >
             <div class="profiles-legend">
                 <h4 class="profiles-legend-title">Profile Types Legend</h4>
                 <ul class="profiles-legend-group">
@@ -771,6 +770,6 @@
                 <h4 class="accessions-legend-title">Filter Accession Types</h4>
                 <div class="accessions-checkboxes"></div>
             </div>
-        </div>
+        </div-->
     </div>
 </div>
