--- a/src/apps/copo_core/templates/copo/copo_group.html
+++ b/src/apps/copo_core/templates/copo/copo_group.html
@@ -209,10 +209,9 @@
             <p class="lead">Users in Group</p>
             <div class="alert alert-info alert-dismissible" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                If you would like to share an {{ manifest_types }} profile with users, please confirm with the users that they 
-                have already been added to the particular manifest group.<br><br>
-                Please ask the users to contact <a style="text-decoration: underline; font-weight: bold;" href="mailto:ei.copo@earlham.ac.uk">ei.copo@earlham.ac.uk</a> 
-                in order to be added to the manifest group if they do not belong to it.
+                Please confirm with the users that they have already been added to the particular profile type group.<br><br>
+                Please ask the users to contact <a style="text-decoration: underline; font-weight: bold;" href="mailto:{{copo_email}}">{{copo_email}}</a> 
+                in order to be added to the profile type group if they do not belong to it.
             </div>
             <label for="basic-url">Search for User
                 <small>(Firstname, Lastname or Username)</small>
