--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -71,7 +71,7 @@
                     <h2 id="contact-title" class="big_button">Contact Us</h2>
                 </div>
                 <div style="padding-top: 10px;">
-                    <form id="email_form" action="mailto:ei.copo@earlham.ac.uk?subject=I'm interested in COPO!"
+                    <form id="email_form" action="mailto:{{copo_email}}?subject=I'm interested in COPO!"
                           method="post"
                           enctype="text/plain">
                         <div class="row">
