Added COPO's black logo to error page

--- a/src/apps/copo_core/templates/copo/error_page.html
+++ b/src/apps/copo_core/templates/copo/error_page.html
@@ -17,6 +17,12 @@
 
 {% block title_block %} Something went wrong : {% endblock %}
 
+{% block image_div %}
+<div class="text-center" style="padding:50px">
+    <img src="{% static 'assets/img/COPO-logo-full-CMYK-black.png' %}" height="200px">
+</div>
+{% endblock image_div%}
+
 {% block content %}
     <div class="wrapper">
         <div class="text-center">
