Adjustment: Provided a fixed bottom position to footer element

--- a/src/apps/copo_landing_page/templates/frontpage.html
+++ b/src/apps/copo_landing_page/templates/frontpage.html
@@ -108,8 +108,8 @@
             </div>
         </section>
     </div>
-    </br></br></br></br></br>
-    <footer id="footer" class="for-full-back" style="background-color: white; min-height: 100px; padding:20px 50px 0 0; margin-top: 1.5px;">
+    <!-- </br></br></br></br></br> -->
+    <footer id="footer" class="for-full-back">
         <div class="pull-right">
             <a href="https://www.earlham.ac.uk/">
                 <img class="img-responsive" src="{% static 'assets/img/ei.png' %}" width="200" height="200" alt="Earlham Institute logo"/>
