--- a/static/assets/css/base_styles.css
+++ b/static/assets/css/base_styles.css
@@ -12,9 +12,26 @@ body {
     font-weight: bold;
 }
 
+html,
+body {
+    height: 100%;
+}
+
 .container-fluid {
     padding-left: 0 !important;
     padding-right: 0 !important;
+    min-height: 100%;
+    position: relative;
+}
+
+#footer {
+    background-color: white;
+    height: 100px;
+    width: 100%;
+    padding: 20px 50px 0 0;
+    margin-top: 1.5px;
+    position: absolute;
+    bottom: 0;
 }
 
 /*=======================================
