add frontend validation for assembly form

--- a/src/apps/copo_assembly_submission/templates/copo/ena_assembly_form.html
+++ b/src/apps/copo_assembly_submission/templates/copo/ena_assembly_form.html
@@ -80,3 +80,12 @@
 
     </div>
 
+    <script>
+        $(document).ready(function () {
+            change_assembly_type()
+
+            $(document).on('change', '#id_submission_type', function () {
+                change_assembly_type()
+            });
+        })
+    </script>    
